# nefive

./: .gitignore  nefive-gen.urdf  readme.md
.github/: FUNDING.yml
nefive/: CMakeLists.txt  package.xml
nefive_bringup/: CMakeLists.txt  package.xml
nefive_bringup/launch/: barrel-demo.launch  bringup.launch
nefive_description/: CMakeLists.txt  package.xml
nefive_description/config/: nefive_control.yaml  wheel_pids.yaml
nefive_description/launch/: display.launch  nefive_control.launch  nefive_spawn.launch  publishers.launch  spawn_nefive_with_controllers.launch  spawn_urdf.launch  start_nefive.launch
nefive_description/rviz/: urdf.rviz
nefive_description/urdf/: arms.xacro  base.xacro  head.xacro  just_arms.urdf.xacro  materials.xacro  nefive-simplified.urdf  nefive-simplified.urdf.xacro  nefive.urdf  torso.xacro  wheels.xacro
nefive_dynamixel/: CMakeLists.txt  package.xml
nefive_motion/: CMakeLists.txt  package.xml
nefive_motion/launch/: mecanum_drive.launch
nefive_motion/src/: diff_motor.py  mecanum_motor_node.py
nefive_moveit/: .setup_assistant  CMakeLists.txt  package.xml
nefive_moveit/config/: fake_controllers.yaml  gazebo_nefive.urdf  joint_limits.yaml  kinematics.yaml  nefive.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
nefive_moveit/launch/: chomp_planning_pipeline.launch.xml  (+14 more)
nefive_msgs/: CMakeLists.txt  package.xml
nefive_servos/: CMakeLists.txt  package.xml
nefive_vision/: CMakeLists.txt  package.xml
nefive_yukon/: CMakeLists.txt  nefive.code-workspace  package.xml
(+59 files in other folders)
