<?xml version="1.0"?>
<package format="2">
  <name>nefive_description</name>
  <version>0.0.0</version>
  <description>The nefive_description package</description>

  <author email="keegan@neave.engineering">Keegan Neave</author>
  <maintainer email="keegan@neave.engineering">keegan</maintainer>
  <url type="website">https://neave.engineering/nefive/</url>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
